# Secure_Reversible_Watermarking

./: LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
attacks/: adv_attacks.py  ai_attacks.py  attack_suite.py  attack_suite_v1.0.py
dataset/: instructions.md
dataset/full dataset/: (Fibrosis) Ultrasound Image.rar  Brain Tumor MRI.rar  CT KIDNEY.rar  Chest CT-Scan.rar  Computed Tomography (CT).rar  CoronaHack -Chest X-Ray.rar  Fracture detection using x-ray.rar  Spine Magnetic Resonance.rar  Tuberculosis (TB) Chest X-ray.rar
reproduce_figures/: eer_rotation_analysis.py  og_bsif_rotation_analysis.py  robustness_plots.py
reproduce_tables/: table_II.py  table_IV.py  table_IX.py  table_V.py  table_VI.py  table_VII.py  table_VIII.py
src/: config_loader.py  embedding.py  extraction.py  flexentech_encryption.py  metrics.py  og_bsif_feature.py  reversible_reconstruction.py  utils.py  watermark_generation.py
